crates/zuban_python/tests/mypylike/tests/language-server.test
[case no-errors-in-unreachable]
# flags: --warn-unreachable

import typing
def foo() -> typing.Never: ...

foo()
abc = 1  # E: Statement is unreachable
1()
abc
